Only one upload dialog can be shown at any time...

BUG: 132535